<resources>
    <string name="app_name">StarWarsSage</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movies_fragment_title">Список фильмов</string>
    <string name="search_field_placeholder">Введите название фильма</string>
    <string name="cancel_button_title">Отмена</string>
    <string name="movie_item_director">Режиссёр: %1$s</string>
    <string name="movie_item_producer">Продюсер(ы): %1$s</string>
    <string name="movie_item_release">Премьера: %1$s</string>
    <string name="movie_item_episode">Эпизод: %1$d</string>
    <string name="nothing_found_title">Ничего не нашлось</string>
    <string name="nothing_found_text">Попробуй скорректировать запрос</string>

    <string name="critical_error_screen_title">Что-то пошло не так</string>
    <string name="critical_error_screen_text">Проверьте подключение к интернет</string>
    <string name="critical_error_screen_again">Попробовать снова</string>

    <string name="person_item_sex">Пол: %1$s</string>
    <string name="person_item_born_date">Год рождения: %1$s</string>
    <string name="person_item_episode">Эпизод: %1$d</string>
    <string name="planet_rotation_period">Суточное вращение:</string>
    <string name="planet_orbital_period">Период обращения\nвокруг звезды:</string>
    <string name="planet_diameter">"Диаметр:"</string>
    <string name="planet_gravity">Гравитация:</string>
    <string name="planet_terrain">"Ландшафт:"</string>
    <string name="planet_population">Численность населения:</string>
    <string name="planet_climate">Климат:</string>
    <string name="snackbar_download_message">Загружаю персонажей с сервера. %1$s из %2$s</string>
    <string name="snackbar_download_movies_message">Загружаю фильмы с сервера. Может занять некоторое время.</string>
    <string name="snackbar_error_message">Не могу обновить данные.\nПроверь соединение с интернетом.</string>
    <string name="snackbar_no_movies_message">В базе данных больше нет фильмов</string>
</resources>