<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/person_card_container"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_rounded"
        app:cardCornerRadius="16dp"
        android:layout_margin="8dp"
        android:elevation="4dp"
        android:layout_centerHorizontal="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:id="@+id/person_linear_container"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <TextView
                android:textSize="24sp"
                android:textStyle="bold"
                style="@style/Theme.StarWarsSage"
                tools:text="@tools:sample/lorem"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:id="@+id/person_item_title"
                android:layout_marginTop="16dp" />


        <TextView
                android:text="@string/person_item_sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                style="@style/Theme.StarWarsSage"
                android:id="@+id/person_item_director"
                android:layout_marginStart="8dp" />

        <TextView
                android:text="@string/person_item_born_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                style="@style/Theme.StarWarsSage"
                android:id="@+id/person_item_producer"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp" />

        <com.google.android.material.imageview.ShapeableImageView
                app:strokeColor="@color/transparent"
                app:strokeWidth="1dp"
                android:id="@+id/user_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>
</androidx.cardview.widget.CardView>