<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:id="@+id/movie_card_container"
        android:layout_height="wrap_content"
        app:cardCornerRadius="16dp"
        android:layout_margin="8dp"
        android:elevation="4dp"
        android:layout_centerHorizontal="true">

    <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="0dp"
                android:layout_height="250dp"
                tools:srcCompat="@tools:sample/avatars"
                android:id="@+id/movie_item_poster"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="8dp" />

        <TextView
                android:textSize="24sp"
                android:textStyle="bold"
                style="@style/Theme.StarWarsSage"
                tools:text="@tools:sample/lorem"
                android:layout_width="wrap_content"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:id="@+id/movie_item_title"
                app:layout_constraintTop_toBottomOf="@+id/movie_item_poster"
                app:layout_constraintStart_toStartOf="@+id/movie_item_poster"
                app:layout_constraintEnd_toEndOf="@+id/movie_item_poster"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        <TextView
                android:textSize="14sp"
                style="@style/Theme.StarWarsSage"
                tools:text="@tools:sample/lorem/random"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/movie_item_text"
                app:layout_constraintEnd_toEndOf="@+id/movie_item_poster"
                app:layout_constraintStart_toStartOf="@+id/movie_item_poster"
                android:layout_marginStart="4dp"
                android:paddingBottom="16dp"
                android:layout_marginEnd="4dp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toBottomOf="@+id/movie_item_producer"
                android:layout_marginTop="16dp" />

        <TextView
                android:text="@string/movie_item_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                style="@style/Theme.StarWarsSage"
                android:id="@+id/movie_item_director"
                app:layout_constraintTop_toBottomOf="@+id/movie_item_title"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginStart="4dp" />

        <TextView
                android:text="@string/movie_item_episode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                style="@style/Theme.StarWarsSage"
                android:id="@+id/movie_item_episode"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="4dp"
                app:layout_constraintTop_toTopOf="@+id/movie_item_director"
                app:layout_constraintBottom_toBottomOf="@+id/movie_item_director" />

        <TextView
                android:text="@string/movie_item_producer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="italic"
                style="@style/Theme.StarWarsSage"
                android:id="@+id/movie_item_producer"
                app:layout_constraintTop_toBottomOf="@+id/movie_item_director"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="@+id/movie_item_director" />

        <TextView
                android:text="@string/movie_item_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:textStyle="italic"
                style="@style/Theme.StarWarsSage"
                android:id="@+id/movie_item_release"
                app:layout_constraintStart_toEndOf="@+id/movie_item_title"
                app:layout_constraintBottom_toBottomOf="@+id/movie_item_title"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toTopOf="@+id/movie_item_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>